feat: implement built-in node types for workflow builder
Backend:
- Add NodeType enum with START, END, HTTP_REQUEST, MCP_CALL, CONDITION, DELAY
- Create WorkflowDefinition model for node/edge graph structure
- Implement node executors (HttpRequest, McpCall, Condition, Delay, Start, End)
- Add WorkflowExecutor orchestrating execution from START to END
- Add ExecutionContext and ExecutionResult for execution state
- Add unit tests for executors and WorkflowExecutor

Frontend:
- Expand workflow types with BuiltInNodeType enum and typed configs
- Create nodeRegistry with metadata, icons, default configs
- Build custom node components (StartNode, EndNode, HttpRequestNode, McpCallNode, ConditionNode, DelayNode)
- Create config forms for each node type
- Add AddNodeMenu to Toolbar for adding nodes to canvas
- Update NodePanel with typed config forms
- Add execution state types

E2E:
- Add workflow canvas interaction tests
- Add node configuration tests
- Add CRUD operation tests

Docs:
- Add Javadoc to all node types describing purpose and configuration